--- a/YouTube Trend Analysis.ipynb
+++ b/YouTube Trend Analysis.ipynb
@@ -10,6 +10,10 @@
     "\n",
     "Dataset available [here](https://www.kaggle.com/datasnaek/youtube-new/downloads/youtube-new.zip/68).\n",
     "\n",
+    "Data Incubator Challenge [1st Plot](#plot1)\n",
+    "\n",
+    "Data Incubator Challenge [2nd Plot](#plot2)\n",
+    "\n",
     "### Context\n",
     "YouTube (the world-famous video sharing website) maintains a list of the top trending videos on the platform. According to Variety magazine, “To determine the year’s top-trending videos, YouTube uses a combination of factors including measuring users interactions (number of views, shares, comments and likes). Note that they’re not the most-viewed videos overall for the calendar year”. Top performers on the YouTube trending list are music videos (such as the famously virile “Gangam Style”), celebrity and/or reality TV performances, and the random dude-with-a-camera viral videos that YouTube is well-known for.\n",
     "\n",
@@ -1344,12 +1348,28 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These charts are interesting: they show that videos tend to stay trending for much longer in a country like the UK than in other countries.\n",
+    "\n",
+    "In order to see the contrasts more clearly, we can chart the highest trend duration from each country on one chart:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"plot1\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "In order to see the contrasts more clearly, we can chart the highest trend duration from each country on one chart:"
+    "### Plot1"
    ]
   },
   {
@@ -1686,11 +1706,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"plot2\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
+    "### Plot 2\n",
+    "\n",
     "We would like to find out if there is any relationship between the title or tag or description of a video and its popularity or lack of popularity.\n",
     "\n",
     "First of all, let's look at the kinds of words that are generally used in titles, tags and descriptions for the most popular videos. We will look at the top 100 videos (based on trend duration) in each country."
