--- a/YouTube Trend Analysis.ipynb
+++ b/YouTube Trend Analysis.ipynb
@@ -1706,20 +1706,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"plot2\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "### Plot 2\n",
-    "\n",
     "We would like to find out if there is any relationship between the title or tag or description of a video and its popularity or lack of popularity.\n",
     "\n",
     "First of all, let's look at the kinds of words that are generally used in titles, tags and descriptions for the most popular videos. We will look at the top 100 videos (based on trend duration) in each country."
@@ -1818,6 +1809,20 @@
    },
    "source": [
     "First we'll check out the title word clouds"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"plot2\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot 2"
    ]
   },
   {
