--- a/YouTube Trend Analysis.ipynb
+++ b/YouTube Trend Analysis.ipynb
@@ -1369,7 +1369,7 @@
     "editable": true
    },
    "source": [
-    "### Plot1"
+    "### Plot1: Longest trending durations per country"
    ]
   },
   {
@@ -1822,7 +1822,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot 2"
+    "### Plot 2: Titles of most popular (top 100) trending videos per country"
    ]
   },
   {
