--- a/YouTube Trend Analysis.ipynb
+++ b/YouTube Trend Analysis.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# YouTube Trend Analysis\n",
     "\n",
@@ -10,9 +13,6 @@
     "\n",
     "Dataset available [here](https://www.kaggle.com/datasnaek/youtube-new/downloads/youtube-new.zip/68).\n",
     "\n",
-    "Data Incubator Challenge [1st Plot](#plot1)\n",
-    "\n",
-    "Data Incubator Challenge [2nd Plot](#plot2)\n",
     "\n",
     "### Context\n",
     "YouTube (the world-famous video sharing website) maintains a list of the top trending videos on the platform. According to Variety magazine, “To determine the year’s top-trending videos, YouTube uses a combination of factors including measuring users interactions (number of views, shares, comments and likes). Note that they’re not the most-viewed videos overall for the calendar year”. Top performers on the YouTube trending list are music videos (such as the famously virile “Gangam Style”), celebrity and/or reality TV performances, and the random dude-with-a-camera viral videos that YouTube is well-known for.\n",
@@ -35,7 +35,7 @@
     "\n",
     "\n",
     "\n",
-    "*This analysis project is still in progress*."
+    "*This project is still in progress*."
    ]
   },
   {
@@ -1348,28 +1348,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These charts are interesting: they show that videos tend to stay trending for much longer in a country like the UK than in other countries.\n",
-    "\n",
-    "In order to see the contrasts more clearly, we can chart the highest trend duration from each country on one chart:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"plot1\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
    },
    "source": [
-    "### Plot1: Longest trending durations per country"
+    "These charts are interesting: they show that videos tend to stay trending for much longer in a country like the UK than in other countries.\n",
+    "\n",
+    "In order to see the contrasts more clearly, we can chart the highest trend duration from each country on one chart:"
    ]
   },
   {
@@ -1812,20 +1798,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id=\"plot2\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Plot 2: Titles of most popular (top 100) trending videos per country"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
@@ -1968,7 +1940,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
